ingress-url-redirect/HO/mapleapi-prod-hc-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mapleapi-prod-hc-ingress
  namespace: maple-prod
spec:
  rules:
  - host: api-ho.maple.comcast.net
    http:
      paths:
      - backend:
          serviceName: mapleapi-prod-svc
          servicePort: 80
        path: /
